@@ -3,15 +3,13 @@ package com.rrss.backend.dto;
 import com.rrss.backend.model.Review;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record ReviewDto(
         Long id,
         ReviewProductDto reviewProductDto,
         ReviewUserDto userDto,
         List<FieldScoreDto> fieldScoreDtos,
-        List<FlagDto> flagDtos,
-        // reply
+        ReviewReplyDto reviewReplyDto,
         String comment
 ) {
     public static ReviewDto convert (Review from) {
@@ -19,8 +17,11 @@ public record ReviewDto(
                 from.getId(),
                 ReviewProductDto.convert(from.getProduct()),
                 ReviewUserDto.convert(from.getUser()),
-                from.getScores().stream().map(FieldScoreDto::convert).collect(Collectors.toList()),
-                from.getFlags().stream().map(FlagDto::convert).collect(Collectors.toList()),
+                from.getScores()
+                        .stream()
+                        .map(FieldScoreDto::convert)
+                        .toList(),
+                (from.getReply() == null) ? null : ReviewReplyDto.convert(from.getReply()),
                 from.getComment()
         );
     }
